backend/kube/deployemnt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: esgi-hugo-4al1
  name: backend-deployment
  labels:
    demo.app: backend-esgi-hugo-4al1
spec:
  replicas: 2
  selector:
    matchLabels:
      demo.app: backend-esgi-hugo-4al1
  template:
    metadata:
      labels:
        demo.app: backend-esgi-hugo-4al1
    spec:
      containers:
      - name: backend
        image: hcachon/devops-backend:3911a3de8289f2bd8ed952691bdea6a75e2874f5    
        imagePullPolicy: Always
        ports:
        - containerPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: esgi-hugo-4al1
  name: database-deployment
  labels:
    demo.app: backend-esgi-hugo-database-4al1
spec:
  replicas: 1
  selector:
    matchLabels:
      demo.app: backend-esgi-hugo-database-4al1
  template:
    metadata:
      labels:
        demo.app: backend-esgi-hugo-database-4al1
    spec:
      containers:
      - name: postgres
        image: postgres:16.1
        ports:
        - containerPort: 5432

---

apiVersion: v1
kind: Service
metadata:
  namespace: esgi-hugo-4al1
  name: backend-esgi-hugo-4al1-service
spec:
  selector:
    demo.app: backend-esgi-hugo-4al1
  ports:
  - protocol: TCP
    port: 4568
    targetPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  namespace: esgi-hugo-4al1
  name: database-esgi-hugo-4al1-service
spec:
  selector:
    demo.app: backend-esgi-hugo-database-4al1
  ports:
  - protocol: TCP
    port: 45678
    targetPort: 5432

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: esgi-hugo-4al1
  labels:
    app.kubernetes.io/component: controller
  name: nginx-esgi-hugo-4al1
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-esgi-hugo-4al1-ingress
  namespace: esgi-hugo-4al1
spec:
  ingressClassName: nginx-esgi-hugo-4al1
  tls:
    - hosts:
        - backend.4al1.chancy.jbienvenu.fr
      secretName: backend-esgi-hugo-4al1-tls
  rules:
    - host: backend.4al1.chancy.jbienvenu.fr
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: backend-esgi-hugo-4al1-service
                port:
                  number: 4568
